# multinode

./: .gitignore  README.md
.github/workflows/: ci.yml
aws-infra/: README.md  example.tf
aws-infra/multinode/: control_plane_api_service.tf  control_plane_db.tf  control_plane_environment_variables.tf  control_plane_loop_service.tf  control_plane_security_groups.tf  control_plane_task_role.tf  docker_repository.tf  outputs.tf  shared_cluster.tf  shared_execution_role.tf  variables.tf  worker_logs.tf  worker_security_group.tf  worker_task_role.tf
control-plane/: Dockerfile  README.md  developer_notes.md  example-dev.env  pyproject.toml
control-plane/control_plane/control/api/: all.py  execution.py  invocation.py  logs.py  registration.py  repository_credentials.py  runtime.py
control-plane/control_plane/control/api/utils/: project_deletion_requests.py  version_reference_resolution.py
control-plane/control_plane/control/periodic/: all.py  executions.py  executions_helper.py  executions_termination_signals_helper.py  functions.py  invocations.py  invocations_cancellation_propagation_helper.py  invocations_cancellation_requests_helper.py  invocations_helper.py  projects.py  projects_deletion_helper.py
control-plane/control_plane/control/utils/: version_reference.py  version_reference_utils.py
control-plane/control_plane/data/: basic_sql_table.py  data_store.py  error_helpers.py  executions.py  functions.py  invocations.py  projects.py  sql_connection.py  versions.py
control-plane/control_plane/data/sql_utils/: sql_connection.py
control-plane/control_plane/docker/: credentials_loader.py  ecr_credentials_loader.py
control-plane/control_plane/entrypoints/: api.py  basic_api.py  generate_schema.py  loop.py
control-plane/control_plane/entrypoints/api_setup/: api_endpoints.py
control-plane/control_plane/entrypoints/utils/: authenticator_setup.py  cli_arguments.py  current_time.py  documentation.py  environment.py  provisioner_setup.py  repository_credentials_setup.py  sql_setup.py
control-plane/control_plane/provisioning/: dev_provisioner.py  ecs_cpu_memory_helper.py  ecs_provisioner.py  external_provisioner.py  http_helper.py  provisioner.py
control-plane/control_plane/shared/: parameter_bounds.py  worker_environment_variables.py
control-plane/control_plane/types/: api_errors.py  datatypes.py  errortypes.py  offset_helpers.py  parent_invocation_helper.py  project_name_helper.py  random_ids.py  version_reference.py
control-plane/control_plane/user_management/: authenticator.py  simple_authenticator.py
control-plane/environment/: example-dev.env  example-ecs.env  example-external.env
control-plane/iam_permissions/: iam_policy.json
control-plane/iam_permissions/ci/: ecr_full_access.json  ecs_provisioning.json
control-plane/integration_tests/docker/: run_ecr_credentials_loader.py
control-plane/integration_tests/provisioning/: run_ecs_provisioner.py  run_external_provisioner.py
control-plane/tests/control/: test_end_to_end.py
control-plane/tests/control/periodic/: test_executions_helper.py  test_executions_termination_signals_helper.py  test_invocations_cancellation_propagation_helper.py  test_invocations_cancellation_requests_helper.py  test_invocations_helper.py  test_projects_deletion_helper.py
control-plane/tests/control/utils/: test_random_ids.py  test_version_reference.py  version_reference.py
control-plane/tests/data/: test_basic_sql_table.py  test_executions.py  test_functions.py  test_invocations.py  test_project_deletion.py  test_projects.py  test_versions.py
control-plane/tests/datatypes/: test_datatypes.py  test_offset_helpers.py
control-plane/tests/docker/: dummy_credentials_loader.py
control-plane/tests/entrypoints/utils/: test_environment.py
control-plane/tests/provisioning/: dummy_provisioner.py  test_dev_provisioner.py  test_ecs_cpu_memory_helper.py  test_ecs_provisioner.py  test_http_handler.py
control-plane/tests/types/: test_datatypes.py
control-plane/tests/user_management/: test_simple_authenticator.py
ecs-environment/provisioner-lambda/: README.md  environment.env  lambda_handler.py  main.py
ecs-environment/terraform/: example.tfvars  main.tf  outputs.tf  variables.tf
ecs-environment/terraform/ecs_environment/: outputs.tf  provisioner_lambda.tf  task_cluster.tf  task_roles.tf  task_security_group.tf  variables.tf
example-project/: README.md
example-project/application/: main.py
example-project/tasks/: main.py
images/: architecture.excalidraw
python-client/: .openapi-generator-ignore  README.md  developer_notes.md  pyproject.toml
python-client/docs/: definitions.md  invocations.md  registration.md
python-client/multinode/: __init__.py  config.py  constants.py  errors.py  main.py
python-client/multinode/cli/: deployment.py  describe.py  fail.py  main.py
python-client/multinode/core/: deployment.py  errors.py  external.py  function.py  invocation.py  job.py  multinode.py
python-client/multinode/utils/: api.py  cli_helpers.py  dynamic_imports.py  errors.py  imports.py
python-client/multinode/worker/: main.py  runner.py
python-client/scripts/: generate_client.sh  generate_error_types.py  lint.sh
python-client/tests/core/: test_function.py  test_invocation.py
python-client/tests/worker/: test_runner.py
python-client/tests/worker/test_project/: main.py  yield_fn_final.py
python-client/tests/worker/test_project/test_project/: length_calculation.py
python-client/tests/worker/test_project/test_project/errors/: FailedFunctionError.py
python-clients/: README.md
python-clients/multinode/: README.md  pyproject.toml
python-clients/multinode-external/: README.md  pyproject.toml
python-clients/multinode-shared/: .openapi-generator-ignore  README.md  pyproject.toml
python-clients/multinode-shared/multinode_shared/: config.py  function.py
python-clients/multinode-shared/multinode_shared/utils/: api.py
python-clients/multinode/multinode/: __init__.py  main.py
python-clients/multinode/multinode/utils/: cli_helpers.py  (+1 more)
python-clients/scripts/: generate_client.sh  init.sh  lint.sh
