[tool.poetry]
name = "control-plane"
version = "0.1.0"
description = ""
authors = ["Kenny Wong <kenny@quantumboost.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.4.0"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
psycopg2-binary = "^2.9.7"

[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
pytest = "^7.4.2"
types-psycopg2 = "^2.9.21.14"
black = "^23.9.1"

[tool.poetry.scripts]
api = "control_plane.entrypoints.basic_api:main"

[tool.pytest.ini_options]
addopts = "--verbose"
testpaths = [
    "tests"
]

[tool.black]
line-length = 120

[tool.mypy]
strict = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
